k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-cluster-ip-service

spec:
  # ClusterIp exposes a set of pods to other objects in the cluster,
  # and aNodePort exposes a set of pods to the outside world (only for development)
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    # This is the same as the label in postgres-deployment.yaml
    component: postgres
