k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-cluster-ip-service

spec:
  # ClusterIp exposes a set of pods to other objects in the cluster,
  # and aNodePort exposes a set of pods to the outside world (only for development)
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    # This is the same as the label in redis-deployment.yaml
    component: redis
